--- a/zremal/controller/jenkins.yaml
+++ b/zremal/controller/jenkins.yaml
@@ -2,7 +2,7 @@ apiVersion: jenkins.io/v1alpha2
 kind: Jenkins
 metadata:
   name: zremal
-  namespace: jenkins
+  namespace: jenkins-operator
 spec:
   master:
     basePlugins:
