--- a/zremal/controller/jenkins.yaml
+++ b/zremal/controller/jenkins.yaml
@@ -40,9 +40,18 @@ spec:
       backup:
         enabled: false
 
+  configurationAsCode:
+    unclassified:
+      location:
+        url: http://jenkins.k3s.zremal.org:8080/
+
   seedJobs:
     - id: jenkins-operator
       targets: "jobs/*.jenkins"
       description: "Jenkins Operator repository"
       repositoryBranch: main
       repositoryUrl: https://github.com/nicosto/jenkins-seed.git
+
+# unclassified:
+#   location:
+#     url: http://jenkins.k3s.zremal.org:8080/
