--- a/values.yaml
+++ b/values.yaml
@@ -5,37 +5,37 @@ metadata:
   namespace: jenkins-operator
 spec:
   master:
-    basePlugins:
-      - name: kubernetes
-        version: "1.29.0"
-      - name: workflow-job
-        version: "2.40"
-      - name: workflow-aggregator
-        version: "2.6"
-      - name: git
-        version: "4.6.0"
-      - name: job-dsl
-        version: "1.77"
-      - name: configuration-as-code
-        version: "1.47"
-      - name: kubernetes-credentials-provider
-        version: "0.16"
+    # basePlugins:
+    #   - name: kubernetes
+    #     version: "1.29.0"
+    #   - name: workflow-job
+    #     version: "2.40"
+    #   - name: workflow-aggregator
+    #     version: "2.6"
+    #   - name: git
+    #     version: "4.6.0"
+    #   - name: job-dsl
+    #     version: "1.77"
+    #   - name: configuration-as-code
+    #     version: "1.47"
+    #   - name: kubernetes-credentials-provider
+    #     version: "0.16"
     plugins:
-      - name: prometheus
-        version: "2.0.8"
-      - name: credentials
-        version: "2.3.15"
-      - name: plain-credentials
-        version: "1.7"
-      - name: dependency-track
-        version: "3.1.0"
+      # - name: prometheus
+      #   version: "2.0.8"
+      # - name: credentials
+      #   version: "2.3.15"
+      # - name: plain-credentials
+      #   version: "1.7"
+      # - name: dependency-track
+      #   version: "3.1.0"
       - name: pipeline-utility-steps
         version: "2.6.1"
 
     containers:
     - name: jenkins-master
       imagePullPolicy: Always
-      # image: jenkins/jenkins:2.263.4-lts-alpine
+      image: jenkins/jenkins:lts-alpine
 
       backup:
         enabled: false
