--- a/values.yaml
+++ b/values.yaml
@@ -2,8 +2,7 @@ apiVersion: jenkins.io/v1alpha2
 kind: Jenkins
 metadata:
   name: zremal
-  namespace: jenkins-operator
-spec:
+  namespace: jenkins
   master:
     # basePlugins:
     #   - name: kubernetes
