--- a/values.yaml
+++ b/values.yaml
@@ -1,48 +1,102 @@
+# apiVersion: jenkins.io/v1alpha2
+# kind: Jenkins
+# metadata:
+#   name: zremal
+#   namespace: jenkins
+#   master:
+#     # basePlugins:
+#     #   - name: kubernetes
+#     #     version: "1.29.0"
+#     #   - name: workflow-job
+#     #     version: "2.40"
+#     #   - name: workflow-aggregator
+#     #     version: "2.6"
+#     #   - name: git
+#     #     version: "4.6.0"
+#     #   - name: job-dsl
+#     #     version: "1.77"
+#     #   - name: configuration-as-code
+#     #     version: "1.47"
+#     #   - name: kubernetes-credentials-provider
+#     #     version: "0.16"
+#     plugins:
+#       # - name: prometheus
+#       #   version: "2.0.8"
+#       # - name: credentials
+#       #   version: "2.3.15"
+#       # - name: plain-credentials
+#       #   version: "1.7"
+#       # - name: dependency-track
+#       #   version: "3.1.0"
+#       - name: pipeline-utility-steps
+#         version: "2.6.1"
+
+#     containers:
+#     - name: jenkins-master
+#       imagePullPolicy: Always
+#       image: jenkins/jenkins:lts-alpine
+
+#       backup:
+#         enabled: false
+
+#   configurationAsCode:
+#     unclassified:
+#       location:
+#         url: http://jenkins.k3s.zremal.org:8080/
+
+
+
+
+
 apiVersion: jenkins.io/v1alpha2
 kind: Jenkins
 metadata:
-  name: zremal
-  namespace: jenkins
-  master:
-    # basePlugins:
-    #   - name: kubernetes
-    #     version: "1.29.0"
-    #   - name: workflow-job
-    #     version: "2.40"
-    #   - name: workflow-aggregator
-    #     version: "2.6"
-    #   - name: git
-    #     version: "4.6.0"
-    #   - name: job-dsl
-    #     version: "1.77"
-    #   - name: configuration-as-code
-    #     version: "1.47"
-    #   - name: kubernetes-credentials-provider
-    #     version: "0.16"
-    plugins:
-      # - name: prometheus
-      #   version: "2.0.8"
-      # - name: credentials
-      #   version: "2.3.15"
-      # - name: plain-credentials
-      #   version: "1.7"
-      # - name: dependency-track
-      #   version: "3.1.0"
-      - name: pipeline-utility-steps
-        version: "2.6.1"
-
-    containers:
-    - name: jenkins-master
-      imagePullPolicy: Always
-      image: jenkins/jenkins:lts-alpine
-
-      backup:
-        enabled: false
-
+  name: example
+  namespace: default
+spec:
   configurationAsCode:
-    unclassified:
-      location:
-        url: http://jenkins.k3s.zremal.org:8080/
+    configurations: []
+    secret:
+      name: ""
+  groovyScripts:
+    configurations: []
+    secret:
+      name: ""
+  jenkinsAPISettings:
+    authorizationStrategy: createUser
+  master:
+    disableCSRFProtection: false
+    containers:
+      - name: jenkins-master
+        image: jenkins/jenkins:2.277.4-lts-alpine
+        imagePullPolicy: Always
+        livenessProbe:
+          failureThreshold: 12
+          httpGet:
+            path: /login
+            port: http
+            scheme: HTTP
+          initialDelaySeconds: 100
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 5
+        readinessProbe:
+          failureThreshold: 10
+          httpGet:
+            path: /login
+            port: http
+            scheme: HTTP
+          initialDelaySeconds: 80
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 1
+        resources:
+          limits:
+            cpu: 1500m
+            memory: 3Gi
+          requests:
+            cpu: "1"
+            memory: 500Mi
 
   seedJobs:
     - id: jenkins-operator
@@ -50,7 +104,3 @@ metadata:
       description: "Jenkins Operator repository"
       repositoryBranch: main
       repositoryUrl: https://github.com/nicosto/jenkins-seed.git
-
-# unclassified:
-#   location:
-#     url: http://jenkins.k3s.zremal.org:8080/
