--- a/values.yaml
+++ b/values.yaml
@@ -52,7 +52,7 @@ apiVersion: jenkins.io/v1alpha2
 kind: Jenkins
 metadata:
   name: example
-  namespace: default
+  namespace: jenkins
 spec:
   configurationAsCode:
     configurations: []
