--- a/values.yaml
+++ b/values.yaml
@@ -51,52 +51,15 @@
 apiVersion: jenkins.io/v1alpha2
 kind: Jenkins
 metadata:
-  name: example
+  name: zremal
   namespace: jenkins
 spec:
-  configurationAsCode:
-    configurations: []
-    secret:
-      name: ""
-  groovyScripts:
-    configurations: []
-    secret:
-      name: ""
-  jenkinsAPISettings:
-    authorizationStrategy: createUser
   master:
     disableCSRFProtection: false
     containers:
-      - name: jenkins-master
-        image: jenkins/jenkins:2.277.4-lts-alpine
+      - name: jenkins-controller
+        image: jenkins/jenkins:lts-alpine
         imagePullPolicy: Always
-        livenessProbe:
-          failureThreshold: 12
-          httpGet:
-            path: /login
-            port: http
-            scheme: HTTP
-          initialDelaySeconds: 100
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 5
-        readinessProbe:
-          failureThreshold: 10
-          httpGet:
-            path: /login
-            port: http
-            scheme: HTTP
-          initialDelaySeconds: 80
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 1
-        resources:
-          limits:
-            cpu: 1500m
-            memory: 3Gi
-          requests:
-            cpu: "1"
-            memory: 500Mi
 
   seedJobs:
     - id: jenkins-operator
