--- a/values.yaml
+++ b/values.yaml
@@ -19,9 +19,9 @@ metadata:
     #     version: "1.47"
     #   - name: kubernetes-credentials-provider
     #     version: "0.16"
-    # plugins:
-      # - name: prometheus
-      #   version: "2.0.8"
+    plugins:
+      - name: prometheus
+        version: "2.0.10"
       # - name: credentials
       #   version: "2.3.15"
       # - name: plain-credentials
