--- a/values.yaml
+++ b/values.yaml
@@ -6,22 +6,22 @@ jenkins-operator:
     name: jenkins
     namespace: jenkins
     image: jenkins/jenkins:lts-alpine
-    # basePlugins:
-    # - name: kubernetes
-    #   version: 1.28.6
-    # - name: workflow-job
-    #   version: "2.40"
-    # - name: workflow-aggregator
-    #   version: "2.6"
-    # - name: git
-    #   version: 4.5.0
-    # - name: job-dsl
-    #   version: "1.77"
-    # - name: configuration-as-code
-    #   version: "1.46"
-    # - name: kubernetes-credentials-provider
-    #   version: 0.15
-  
+    basePlugins:
+      - name: kubernetes
+        version: "1.30.04"
+      - name: workflow-job
+        version: "2.42"
+      - name: workflow-aggregator
+        version: "2.6"
+      - name: git
+        version: "4.9.0"
+      - name: job-dsl
+        version: "1.77"
+      - name: configuration-as-code
+        version: "1.54"
+      - name: kubernetes-credentials-provider
+        version: "0.20"
+    
     plugins: []
 
     backup:
