--- a/values.yaml
+++ b/values.yaml
@@ -3,21 +3,21 @@ jenkins-operator:
     name: jenkins
     namespace: jenkins
     image: jenkins/jenkins:lts-alpine
-    basePlugins:
-      - name: kubernetes
-        version: "1.30.11"
-      - name: workflow-job
-        version: "2.42"
-      - name: workflow-aggregator
-        version: "2.6"
-      - name: git
-        version: "4.9.0"
-      - name: job-dsl
-        version: "1.77"
-      - name: configuration-as-code
-        version: "1.55"
-      - name: kubernetes-credentials-provider
-        version: "0.20"
+#    basePlugins:
+#      - name: kubernetes
+#        version: "1.30.11"
+#      - name: workflow-job
+#        version: "2.42"
+#      - name: workflow-aggregator
+#        version: "2.6"
+#      - name: git
+#        version: "4.9.0"
+#      - name: job-dsl
+#        version: "1.77"
+#      - name: configuration-as-code
+#        version: "1.55"
+#      - name: kubernetes-credentials-provider
+#        version: "0.20"
     
     plugins:
       - name: prometheus
